[package]
name = "warp-json-rpc"
version = "0.2.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "JSON RPC server extension for warp"
repository = "https://github.com/AtsukiTak/warp-json-rpc"
keywords = ["json-rpc", "rpc", "warp"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.38" }
erased-serde = "0.3.13"
futures = "0.3"
http = "0.2.3"
hyper = "0.14.2"
lazycell = "1.3.0"
log = "0.4.13"
serde = { version = "1.0.120", features = ["derive", "rc"] }
serde_json = { version = "1.0.61", features = ["raw_value"] }
warp = "0.3.0"

[dev-dependencies]
tokio = { version = "1.0.2", features = ["macros"] }
